RegisterLogin Feature Updated
